<resources>
    <string name="app_name">Escalar Alcoia i Comtat</string>
    <string name="train_label">Climbing Training Helper</string>
    <string name="sector_sun_morning">Morning Sun</string>
    <string name="sector_sun_afternoon">Afternoon Sun</string>
    <string name="sector_sun_day">All-day Sun</string>
    <string name="sector_sun_no">No Sun</string>
    <string name="sector_walking_time">%1$smin</string>
    <string name="sector_height">%1$sm</string>
    <string name="sector_kids_apt">Kids Apt</string>
    <string name="sector_info_dialog_sun_morning_title">Morning Sun</string>
    <string name="sector_info_dialog_sun_morning_msg">This sector gets shiny on the mornings. Cold walls on the morning, warm on the evening, you choose.</string>
    <string name="sector_info_dialog_sun_afternoon_title">Afternoon Sun</string>
    <string name="sector_info_dialog_sun_afternoon_msg">This sector gets shiny on the afternoons. In the morning this may get quite cold…</string>
    <string name="sector_info_dialog_sun_all_title">All-day Sun</string>
    <string name="sector_info_dialog_sun_all_msg">This sector is shiny all the day! This may get hot on summer. Please, take care.</string>
    <string name="sector_info_dialog_sun_no_title">No Sun</string>
    <string name="sector_info_dialog_sun_no_msg">This sector doesn\'t receive run in the whole day! Bring a jacket.</string>
    <string name="sector_info_dialog_kids_title">Kids Apt</string>
    <string name="sector_info_dialog_kids_msg">This sector has good places to sit nearby. Bringing young children may not be that bad, but please, have caution.</string>
    <string name="safe_strings">%1$s Strings</string>
    <string name="safe_parabolt">%1$s Parabolts</string>
    <string name="safe_spit">%1$s Spits</string>
    <string name="safe_tensor">%1$s Tensors</string>
    <string name="safe_piton">%1$s Pitons</string>
    <string name="safe_buril">%1$s Burils</string>
    <string name="safe_lanyard">Lanyard</string>
    <string name="safe_cracker">Cracker</string>
    <string name="safe_friend">Friend</string>
    <string name="safe_strips">Strips</string>
    <string name="safe_nail">Nails</string>
    <string name="safe_strings_plural">Strings</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_info_register">If you don\'t have an account, we will help you out once you click the login button.</string>
    <string name="login_info_terms">When logging in, you are accepting our <a href="https://escalaralcoiaicomtat.centrexcursionistalcoi.org/terms/">Terms and Conditions of Use</a></string>
    <string name="action_login">Login</string>
    <string name="action_add">Add</string>
    <string name="action_close">Close</string>
    <string name="action_close_app">Close App</string>
    <string name="action_download">Download</string>
    <string name="action_logout">Log Out</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_ok">OK</string>
    <string name="action_check_update">Check for Updates</string>
    <string name="action_update">Update</string>
    <string name="action_donate">Donate</string>
    <string name="action_grant">Grant</string>
    <string name="action_grant_permission">Grant Permission</string>
    <string name="action_back">Go Back</string>
    <string name="action_mark_completed">Mark Completed</string>
    <string name="action_store">Store to device</string>
    <string name="action_disable">Disable</string>
    <string name="action_add_friend">Add Friend</string>
    <string name="action_change">Change</string>
    <string name="action_search">Search…</string>
    <string name="action_open_maps">Open Google Maps</string>
    <string name="action_clear_cache">Clear Cache</string>
    <string name="action_clear_storage">Clear Storage</string>
    <string name="action_clear_downloads">Clear Downloads</string>
    <string name="action_clear_settings">Clear Settings</string>
    <string name="action_launch_app">Launch App</string>
    <string name="action_view_more">View More</string>
    <string name="action_remove">Remove</string>
    <string name="action_delete_old">Delete old data</string>
    <string name="action_try_again">Try Again</string>
    <string name="action_share_with">Share with</string>
    <string name="action_start">Start</string>
    <string name="action_google_auth">Auth with Google</string>
    <string name="action_continue">Continue</string>
    <string name="action_copy">Copy</string>
    <string name="action_share">Share</string>
    <string name="status_checking_updates">Checking…</string>
    <string name="status_fixing">Fixing…</string>
    <string name="status_updating">Updating…</string>
    <string name="status_loading">Loading…</string>
    <string name="status_waiting_internet">Waiting for Internet…</string>
    <string name="status_null" translatable="false">-</string>
    <string name="status_null_double" translatable="false">--</string>
    <string name="status_friend">Friend</string>
    <string name="status_requested">Requested</string>
    <string name="status_sent">Sent</string>
    <string name="status_not_downloaded">Not downloaded</string>
    <string name="status_permission_granted">Permission Granted</string>
    <string name="status_no_completed_paths">No Completed Paths</string>
    <string name="status_no_search">No search query</string>
    <string name="status_server_down">Could not reach server</string>
    <string name="status_server_down_long">You have Internet connection, but we can\'t reach the server. It may be under maintenance, or broken. Wait a bit, a notification may pop up notifying you about any issue.</string>
    <string name="dialog_permission_title">Permission Required!</string>
    <string name="dialog_permission_message">The functionality you are trying to use requires the %s permission. Please grant it, or refuse to use that.</string>
    <string name="dialog_permission_my_location_message">For showing your current position, the app must have access to the location of your device. Please, grant it, or refuse to use this functionality.</string>
    <string name="dialog_downloaded_msg">Downloaded on: %s</string>
    <string name="dialog_uses_storage_msg">Uses: %s</string>
    <string name="dialog_update_title">New Update Available</string>
    <string name="dialog_update_message">Press UPDATE to start the update. Please, check your WiFi network. Mobile Data usage may be high.</string>
    <string name="dialog_no_update_title">No New Updates</string>
    <string name="dialog_no_update_message">There are no new updates to download</string>
    <string name="dialog_mark_completed_title">Mark Path Completed</string>
    <string name="dialog_disable_ads_title">Disabling Ads</string>
    <string name="dialog_description_description_title">Description</string>
    <string name="dialog_description_builder_title">Built By</string>
    <string name="dialog_description_rebuilder_title">Rebuilt By</string>
    <string name="pref_main_title">General</string>
    <string name="pref_main_sum">General settings of the app</string>
    <string name="pref_noti_title">Notifications</string>
    <string name="pref_noti_sum">Notifications settings, and which show or not</string>
    <string name="pref_down_title">Storage</string>
    <string name="pref_down_sum">Storage settings, including app data and downloads</string>
    <string name="pref_info_title">Info</string>
    <string name="pref_info_sum">Version, Build Number, Libraries…</string>
    <string name="pref_gene_language_title">Language</string>
    <string name="pref_gene_language_sum">The language to use in the app</string>
    <string name="pref_gene_nearby_title">Enable Nearby Zones View</string>
    <string name="pref_gene_nearby_sum">Whether or not to enable nearby zones view</string>
    <string name="pref_gene_nearby_distance_title">Nearby Distance</string>
    <string name="pref_gene_nearby_distance_sum">At what distance will a zone be considered as nearby</string>
    <string name="pref_gene_nearby_distance_dialog_title">Nearby Zones Distance (m)</string>
    <string name="pref_gene_nearby_distance_dialog_message">Enter the maximum distance to consider as nearby zone in meters.</string>
    <string name="pref_gene_map_move_marker_title">Center marker on click</string>
    <string name="pref_gene_map_move_marker_sum">If a marker should me centered in the screen when clicked on it</string>
    <string name="pref_gene_section_nearby">Nearby Zones</string>
    <string name="pref_gene_section_map">Map</string>
    <string name="pref_gene_section_advanced">Advanced</string>
    <string name="pref_down_cat_downloads">Downloads</string>
    <string name="pref_down_mobile_title">Mobile Data</string>
    <string name="pref_down_mobile_sum">Use mobile data for downloads</string>
    <string name="pref_down_roaming_title">Roaming</string>
    <string name="pref_down_roaming_sum">Use roaming for downloads</string>
    <string name="pref_acc_cat_visual">Visual</string>
    <string name="pref_acc_cat_completed">Completed Paths</string>
    <string name="pref_acc_cat_social">Social</string>
    <string name="pref_acc_show_image_title">Profile Image Public</string>
    <string name="pref_acc_show_image_sum">If this is enabled, your profile image will be shown to anyone that searches for your profile. Your friends will always be able to see it.</string>
    <string name="pref_acc_completed_paths_title">Completed Paths Public</string>
    <string name="pref_acc_completed_paths_sum">If this is enabled, the paths you mark as completed will be shown to anyone that searches for your profile. Your friends will always be able to see them.</string>
    <string name="pref_acc_show_friends_title">Friends Public</string>
    <string name="pref_acc_show_friends_sum">If this is enabled, your friends will be shown to anyone that searches for your profile. Your friends will always be able to see it.</string>
    <string name="no_internet_title">You have no Internet access</string>
    <string name="no_internet_message">You can access the downloaded content, or try again.</string>
    <string name="completed_path_activity_info_times_tried">Times tried: %d</string>
    <string name="completed_path_activity_info_difficulty">Difficulty: </string>
    <string name="completed_path_activity_info_evolution">Evolution: </string>
    <string name="item_explore">Explore</string>
    <string name="item_map">Map</string>
    <string name="item_downloads">Downloads</string>
    <string name="item_profile">Profile</string>
    <string name="item_settings">Settings</string>
    <string name="item_share">Share</string>
    <string name="tooltip_like">Like</string>
    <string name="fab_desc_back">Go Back</string>
    <string name="fab_desc_position">Current Location</string>
    <string name="fab_desc_download">Download</string>
    <string name="image_desc_downloaded">Downloaded</string>
    <string name="image_desc_friend_request_accept">Accept Friend Request</string>
    <string name="image_desc_friend_request_deny">Deny Friend Request</string>
    <string name="image_desc_like">Like</string>
    <string name="image_desc_warning">Warning</string>
    <string name="placeholder">Placeholder</string>
    <string name="placeholder_grade" translatable="false">##+</string>
    <string name="placeholder_evolution" translatable="false">±##</string>
</resources>