<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_acc_cat_visual">
        <SwitchPreference
            android:key="profile_image_public"
            android:summary="@string/pref_acc_show_image_sum"
            android:title="@string/pref_acc_show_image_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_acc_cat_completed">
        <SwitchPreference
            android:key="completed_paths_public"
            android:title="@string/pref_acc_completed_paths_title"
            android:summary="@string/pref_acc_completed_paths_sum" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_acc_cat_social">
        <SwitchPreference
            android:key="friends_public"
            android:title="@string/pref_acc_show_friends_title"
            android:summary="@string/pref_acc_show_friends_sum" />
    </PreferenceCategory>
</PreferenceScreen>