<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:entries="@array/app_languages"
        android:entryValues="@array/app_languages_values"
        android:key="pref_language"
        android:summary="@string/pref_gene_language_sum"
        android:title="@string/pref_gene_language_title" />

    <PreferenceCategory android:title="@string/pref_gene_section_nearby">
        <SwitchPreference
            android:key="pref_enable_nearby"
            android:summary="@string/pref_gene_nearby_sum"
            android:title="@string/pref_gene_nearby_title" />

        <EditTextPreference
            android:dependency="pref_enable_nearby"
            android:dialogMessage="@string/pref_gene_nearby_distance_dialog_message"
            android:dialogTitle="@string/pref_gene_nearby_distance_dialog_title"
            android:digits="0123456789"
            android:inputType="numberDecimal"
            android:key="pref_nearby_distance"
            android:summary="@string/pref_gene_nearby_distance_sum"
            android:title="@string/pref_gene_nearby_distance_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_gene_section_map">
        <SwitchPreference
            android:key="pref_move_marker"
            android:title="@string/pref_gene_map_move_marker_title"
            android:summary="@string/pref_gene_map_move_marker_sum" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_gene_section_advanced">
        <SwitchPreference
            android:key="pref_error_reporting"
            android:summary="@string/pref_gene_error_reporting_sum"
            android:title="@string/pref_gene_error_reporting_title" />

        <Preference
            android:key="pref_download_data"
            android:summary="@string/pref_gene_download_data_sum"
            android:title="@string/pref_gene_download_data_title" />
    </PreferenceCategory>
</PreferenceScreen>