<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_down_cat_downloads">

        <SwitchPreference
            app:key="pref_mobile_download"
            android:title="@string/pref_down_mobile_title"
            android:summary="@string/pref_down_mobile_sum" />

        <SwitchPreference
            app:key="pref_roaming_download"
            android:title="@string/pref_down_roaming_title"
            android:summary="@string/pref_down_roaming_sum" />

        <SeekBarPreference
            android:max="100"
            android:summary="@string/pref_down_quality_sum"
            android:title="@string/pref_down_quality_title"
            app:key="pref_download_quality"
            app:min="0"
            app:showSeekBarValue="true" />
    </PreferenceCategory>
</PreferenceScreen>