<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_1"
        android:icon="@drawable/ic_outline_map_24"
        android:title="@string/item_map"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_2"
        android:icon="@drawable/ic_outline_cloud_download_24"
        android:title="@string/item_downloads"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/share"
        android:title="@string/item_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings"
        android:title="@string/item_settings"
        app:showAsAction="never" />
</menu>