<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.MapsActivity">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_margin="16dp"
        android:tooltipText="@string/action_back"
        android:contentDescription="@string/fab_desc_back"
        app:borderWidth="0dp"
        app:backgroundTint="@color/colorAccent"
        app:tint="@color/white"
        app:srcCompat="@drawable/round_chevron_left_24"
        tools:ignore="UnusedAttribute" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginStart="20dp"
        android:layout_marginTop="76dp"
        android:orientation="vertical">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:id="@+id/fabCurrentLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/fab_desc_position"
            app:backgroundTint="@color/colorAccent"
            app:borderWidth="0dp"
            app:fabSize="mini"
            app:srcCompat="@drawable/round_gps_not_fixed_24"
            app:tint="@color/white"
            tools:ignore="UnusedAttribute" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:id="@+id/fabDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tooltipText="@string/action_download"
            android:contentDescription="@string/fab_desc_download"
            app:backgroundTint="@color/colorAccent"
            app:borderWidth="0dp"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_baseline_save_alt_24"
            app:tint="@color/white"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>

    <ImageView
        android:id="@+id/mapDownloadedImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="8dp"
        android:contentDescription="@string/image_desc_downloaded"
        android:src="@drawable/cloud_check" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>