<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/user_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:fontFamily="@font/product_sans_bold"
        android:text="@string/placeholder"
        android:textSize="18sp"
        android:ellipsize="end"
        android:layout_marginStart="4dp"/>

    <ProgressBar
        android:id="@+id/friend_request_progressBar"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:indeterminate="true" />

    <ImageButton
        android:id="@+id/confirm_imageButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@android:color/transparent"
        android:src="@drawable/round_check_24"
        android:contentDescription="@string/image_desc_friend_request_accept"/>

    <ImageButton
        android:id="@+id/deny_imageButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@android:color/transparent"
        android:src="@drawable/round_close_24"
        android:contentDescription="@string/image_desc_friend_request_deny"/>
</LinearLayout>