<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/builtBy_titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/cabin"
        android:text="@string/dialog_description_builder_title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/builtBy_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:text="@string/placeholder" />

    <TextView
        android:id="@+id/rebuiltBy_titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/cabin"
        android:text="@string/dialog_description_rebuilder_title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/rebuiltBy_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:text="@string/placeholder" />

    <TextView
        android:id="@+id/description_titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/cabin"
        android:text="@string/dialog_description_description_title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/description_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/placeholder" />

    <Button
        android:id="@+id/sendFeedback_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_send_feedback"
        android:textAllCaps="false" />
</LinearLayout>